# multi-Agent

./: .env.example  .gitignore  .task.md.b33-done  CLAUDE.md  README.md  electron-builder.yml  index.html  package-lock.json  package.json  settings.local.json  test_model_status_line.py  tsconfig.node.json  unattended.sh  vite.config.ts
backend/: agent_templates.py  config.py  llm_provider_catalog.py  main.py  pyproject.toml  requirements.txt  skill_hub.py
backend/api/: __init__.py  agents.py  conversations.py  groups.py  mcp.py  messages.py  plan.py  scheduled_tasks.py  skills.py  system.py  tasks.py  websocket.py
backend/app/: main.py
backend/engine/: __init__.py  agent_executor.py  agent_loop.py  cli_executor.py  coordinator.py  direct.py  dispatcher.py  group_graph.py  group_runtime.py  inbox.py  mcp_manager.py  mention.py  registry.py  reply.py  scheduler.py  state.py  tools.py  worker.py  workspace.py
backend/events/: __init__.py  bus.py
backend/llm/: __init__.py  client.py  extract_json.py  json_stream.py  probe.py  prompts.py
backend/models/: __init__.py  agent.py  conversation.py  group.py  llm_provider.py  mcp.py  message.py  scheduled_task.py  skill.py  task.py
backend/store/: __init__.py  crud.py  database.py  entities.py  seed.py  skill_assets.py
backend/tests/: test_ag01_agent_generate.py  test_ag05_agent_list_display.py  test_ag06_agent_edit.py  test_ag08_skill_mount.py  test_ag11_templates_browse.py  test_ag12_template_hire.py  test_be_reset_session.py  test_be_slash_helper.py  test_cf_config_endpoint.py  test_coordinator.py  test_m12_boundary_new_demand.py  test_m12_e2e_three_actions.py  test_m12_plan_confirm.py  test_m12_unit_interrupt_resume.py  test_m12_verify_imports.py  test_mc01_mcp_list.py  test_mc02_mcp_create.py  test_mt01_team_assemble.py  test_mt02_leader_assign.py  test_mt03_leader_strategy.py  test_mt04_group_name_desc.py  (+116 more)
src/: App.css  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+200 files in other folders)
