[project]
name = "multi-agent-backend"
version = "0.1.0"
description = "多智能体协作框架 - 后端服务"
requires-python = ">=3.10"
dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # LangChain + LangGraph
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.3.0",

    # 数据库（PostgreSQL，宿主机已有）
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",

    # Redis（宿主机已有）
    "redis>=5.0.0",

    # Docker 容器管理
    "docker>=7.0.0",

    # 数据验证
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # WebSocket
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
