[package]
name = "multi-agent"
version = "0.1.0"
description = "多智能体协作桌面应用"
authors = ["wyq"]
edition = "2021"
rust-version = "1.77"

# Tauri 应用库：真正的后端入口
[lib]
name = "multi_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
anyhow = "1"
thiserror = "2"
dirs = "5"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
once_cell = "1"

[features]
# 默认关闭自定义协议，开发时走 vite dev server
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
